gke/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
spec:
  template:
    spec:
      containers:
        - name: jenkins
          volumeMounts:
            - mountPath: /jenkins-customization/gke
              name: jenkins-gke-customization
            - mountPath: /jenkins-plugins/gke
              name: jenkins-gke-plugins
          startupProbe:
            periodSeconds: 30
          livenessProbe:
            periodSeconds: 20
          readinessProbe:
            periodSeconds: 20
      volumes:
        - name: jenkins-gke-plugins
          configMap:
            name: jenkins-gke-plugins
        - name: jenkins-gke-customization
          configMap:
            name: jenkins-gke-customization
